Fix homepage grid images on mobile - remove gap offset

--- a/themes/less/assets/css/application.scss
+++ b/themes/less/assets/css/application.scss
@@ -622,3 +622,12 @@ span.link-subtitle {
   left: calc(var(--gap, 18px) * 0.5);
   top: calc(var(--gap, 18px) * 0.5);
 }
+
+@media (max-width: 767px) {
+  .mgrid img {
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+  }
+}
